Prevent wrapping issues in names/timestamps

--- a/Web/css/_chat.less
+++ b/Web/css/_chat.less
@@ -11,6 +11,7 @@
 	time {
 		font-family: Consolas, "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace;
 		color: @rohpod-user-steam;
+		white-space: nowrap;
 		&:after {
 			content: "\00a0\2011";
 			// font-family: inherit;
@@ -32,6 +33,7 @@
 
 	.sender {
 		color: @rohpod-user-steam;
+		white-space: nowrap;
 		&:after {
 			content: ":";
 			display: inline;
